# common

./: .gitignore  README
android/scripts/: adbuild
c/: AUTHORS  README  TODO
c#/Validation/Source/: CommonAssemblyInfo.cs
c#/Validation/VisualStudio/: Local.testsettings  TraceAndTestImpact.testsettings  Validation.Doxyfile  Validation.ndoc  Validation.shfbproj  Validation.sln  Validation.vsmdi
c#/network/: AsyncSocketClient.cs  SyncSocketClient.cs  testFixture.cs
c++/boost/: BoostTester.sln
c++/boost/BoostTester/: ActiveObject.hpp  BoostTester.vcproj  ConcurrentQueue.hpp  ConnectionManager.cpp  ConnectionManager.h  ConsoleHandler.cpp  ConsoleHandler.h  Consumer.hpp  File.cpp  File.h  ObjectFactory.hpp  ObjectPool.hpp  Packet.h  Producer.hpp  Protocol.h  Publisher.hpp  Registry.hpp  RequestHandler.hpp  SocketClient.cpp  SocketClient.h  SocketMessage.cpp  SocketMessage.h  SocketServer.cpp  SocketServer.h  SocketSession.cpp  SocketSession.h  StopWatch.hpp  Subscriber.hpp  TimedCall.hpp  globals.h  resource.h  stdafx.cpp  stdafx.h  string_helpers.hpp
c++/boost/Tester/: Generator.h  Tester.aps  Tester.cpp  Tester.vcproj  resource.h  stdafx.h
c++/boost/UnitTester/: ActiveObjectFixture.cpp  ConcurrentQueueFixture.cpp  ObjectFactoryFixture.cpp  RegistryFixture.cpp  RequestHandlerFixture.cpp  SocketMessageFixture.cpp  TimedCallFixture.cpp  UnitTester.cpp  UnitTester.vcproj  stdafx.h
c++/interviews/: group-count.cc
c++/jni/: jni_util.h
c++/projects/boost/: Makefile  boost-path-walk.cc
c++/projects/llvm/: todo
c++/snippets/: atomic-example.cc
c/doc/: flasher.1
c/include/: bitops.h  common.h  gen_common.h  generic.h  memoryx.h  smtp.h  socketx.h  stringx.h  timex.h
c/lib/: Makefile.am  socketx.c  sysinfo.c
c/osl/: libjpegx.c
c/plugin/: Makefile  example.c
c/po/: Makevars  POTFILES.in
c/rfc/: gen_dict.c  generic.c
c/sdsl/: Makefile.am  NEWS  aclocal.m4  cll.c  cll.h  configure.ac  dll.c  dll.h  queue.c  stack.h
c/sdsl/debian/: control
c/sdsl/doc/: Makefile.am  doxygen.inc
c/sdsl/include/: filex.h  gettext.h  iox.h  language.h  macros.h  sysinfo.h  typesx.h
c/sdsl/lib/: filex.c  iox.c  language.c  memoryx.c  stringx.c  timex.c
c/sdsl/po/: en_US.po  flasher.pot
c/sdsl/rfc/: gen_common.c  smtp.c
c/sdsl/scripts/: doxygen.inc  ipv6-test.sh  make-tags.sh  splint.sh  svndigest.inc
c/sdsl/sdsl/: queue.h  sll.c  sll.h  stack.c
c/sdsl/src/: Makefile.am  gui-helper.c  gui-logger.c  gui-settings.h  main.c  serial-client.c  serial-client.h
c/sdsl/test/: test_sdsl.c
c/share/: flasher.glade
c/snippets/: list.h  regex.c  regex.h
c/src/: ftp-client.c  ftp-client.h  gui-events.c  gui-events.h  gui-helper.h  gui-logger.h  gui-settings.c
c/test/: Makefile.am
clojure/sicp/: project.clj
clojure/skeleton/: README.md  project.clj
compiler/lexer/: Makefile  lex.1
compiler/llvm/: Makefile  README.rst  compiler.cpp
csharp/caching/: .hg_archival.txt  .hgignore
csharp/functional/: Common.cs  EitherMonad.cs  IdentityMonad.cs  ListMonad.cs  MaybeMonad.cs  Monad.cs  Monoid.cs  NullBusinessLogic.cs  Program.cs  Readme.rst  Summary.cs  TreeExample.cs  WriterMonad.cs
csharp/metrics/: Instrumentation.sln
csharp/snippets/: HttpClient.cs  IHttpClient.cs
decorators/: allow_aything.py
go/: TODO
go/examples/: concurrency_examples.go  makefile
go/skeleton/: .gitignore
java/: TODO
java/bashwork-commons/: .classpath  .project  pom.xml
java/camel/: build.xml  start.sh
java/examples/: pom.xml
java/python/: sample.py
java/scripts/: run-service.sh
java/snippets/: BetaReductionExamples.java  ByteStreams.java  CharStreams.java  FileBasedHeapSort.java  GenericBuilder.java  StreamsTesting.java  WorkflowExample.java
java/src/: PatentReference.java  PutMerge.java  WordCount.java  WordCountEx.java
java/stream/: average-mapper.py  histogram-mapper.py
js/backbone-demo/: agenda.rst  quotes.sh  search.html  speleo.js  update.sh
js/node/: discovery.js
js/scripts/: debounce.js  selector.html
jython/skeleton/: README.rst  build.xml
matlab/: hamming.m
python/: .gitignore  TODO  setup.cfg  setup.py
python/ai/: connect.py
python/algorithms/: common.py  goose_train.arff  k-nearest-neighbor.py  testing.arff
python/bashwork/: __init__.py  combinator.py  coroutines.py  encoder.py  generators.py  iterables.py  maths.py  parsing.py  pimps.py  string.py  strings.py  test_combinator.py  test_encoder.py  test_generators.py  test_maths.py  test_strings.py
python/decorators/: retryable.py  updater.py
python/documentation/: Makefile
python/interview/: design-patterns.py  dynamic.py  graph.py  hashtable.py  heaps.py  lists.py  matrix.py  parsing.py  sets.py  strings.py  structures.py  todo  trees.py
python/patterns/: builder.py
python/problems/: abbr-recovery.py  blackjack.py  coin-problem.py  comment-print.py  drinks  eight-queens.py  encrypted-dictionary.py  find-celebrity.py  image-groups.py  is-file-shared.py  matrix-partition.py  matrix-search.py  minesweeper.py  missing-letter.py  simple.py  streams.py  structures.py  sudoku-dict-solver.py  sudoku-solver.py  super-scramble.py  wheel-scramble.py  word-transform.py
python/projects/: combinator.py
python/puzzles/: README.rst  bee-maze.py  blackjack.py  brute-force-timings.py  common.py  die-maze.py  domino-swap.py  drink-encoding.py  drinks  headline-word.py  image-maze.py  interleaved-names.py  missing-letter.py  nfl-graph-words.py  sequences.py  travel-graphs.py  wheel-scramble.py
python/scripts/: ctypes-example.py  encryption.py  file-indexer.py  ipycluster.py  lis.py  random-mouse.py  stacksampler.py  sublogger.py
ruby/combinators/: cardinal.rb  kestral.rb  thrush.rb
ruby/gem-template/: Rakefile
scala/parser-combinator/: .gitignore  build.sbt
scala/skeleton/: README.rst  build.xml
scala/snippets/: functions.scala  monoids.scala  tree.scala
scheme/: church-encoding.ss  church-numerals.ss
scheme/little-schemer/: chapter-1-5.ss  chapter-10.ss  chapter-6.ss  chapter-7.ss  chapter-8.ss  chapter-9.ss
shell/snippets/: arguments.sh
web/xhtml/: template.html
(+1810 files in other folders)
