#---------------------------------------------------------------------------# 
# Manpage files
#---------------------------------------------------------------------------# 
#EXTRA_DIST = 
dist_man_MANS = flasher.1

#---------------------------------------------------------------------------# 
# Command for making doxygen
#---------------------------------------------------------------------------# 
doxygen:
	doxygen doxygen.inc
